--- a/progress-steps/styles.css
+++ b/progress-steps/styles.css
@@ -14,7 +14,6 @@ body {
    font-size: 1.6rem;
    display: grid;
    place-items: center center;
-   width: 100%;
    height: 100vh;
    font-family: Arial, Helvetica, sans-serif;
 }
@@ -26,14 +25,7 @@ body {
    justify-content: space-between;
    position: relative;
 }
-.progress-bar__progress {
-   display: inline;
-   width: 0;
-   z-index: 2;
-   background-color: var(--purple-light);
-}
 .progress-bar::before,
-.progress-bar::after,
 .progress-bar__progress {
    content: '';
    height: .5rem;
@@ -41,17 +33,23 @@ body {
    top: 0;
    left: 0;
    transform: translateY(230%);
+   transition: width 300ms ease-out;
 }
 .progress-bar::before {
    z-index: 1;
    width: 100%;
    background-color: var(--gray-light);
 }
-.progress-bar::after {
+.progress-bar__progress {
+   display: inline;
    z-index: 2;
    background-color: var(--purple-light);
+   box-shadow: 0px 3px 6px 0px var(--purple-light);
 }
 .progress-bar__step {
+   user-select: none;
+   z-index: 5;
+   cursor: default;
    border-radius: 50%;
    text-align: center;
    width: 3rem;
@@ -59,18 +57,18 @@ body {
    display: grid;
    place-items: center center;
    background-color: var(--white-dark);
-   z-index: 5;
    border: 3px solid var(--gray-light);
    transition: all 500ms ease;
 }
 .progress-bar__step--active {
+   box-shadow: 0px 3px 6px 0px var(--purple-light);
    background-color: var(--white);
    border: 3px solid var(--purple-light);
 }
 
 /* buttons */
 .buttons {
-   margin-top: 2rem;
+   margin-top: 3.5rem;
    display: flex;
    justify-content: center;
    gap: 2rem;
@@ -84,15 +82,17 @@ button {
    cursor: pointer;
    transition: all 700ms ease;
 }
-button:hover {
-   opacity: .8;
-   box-shadow: none;
-}
+button:hover { box-shadow: none; }
 .button-previous {
    background-color: var(--gray);
-   box-shadow: 0px 5px 10px 0px var(--gray-light);
+   box-shadow: 0px 6px 12px 0px var(--gray-light);
 }
 .button-next {
    background-color: var(--purple);
-   box-shadow: 0px 5px 10px 0px var(--purple-light);
+   box-shadow: 0px 6px 12px 0px var(--purple-light);
+}
+.button--locked {
+   background-color: var(--purple-light);
+   box-shadow: none;
+   cursor: not-allowed;
 }
