--- a/progress-steps/styles.css
+++ b/progress-steps/styles.css
@@ -82,7 +82,10 @@ button {
    cursor: pointer;
    transition: all 700ms ease;
 }
-button:hover { box-shadow: none; }
+button:hover {
+   opacity: .7;
+   box-shadow: none;
+}
 .button-previous {
    background-color: var(--gray);
    box-shadow: 0px 6px 12px 0px var(--gray-light);
@@ -92,7 +95,7 @@ button:hover { box-shadow: none; }
    box-shadow: 0px 6px 12px 0px var(--purple-light);
 }
 .button--locked {
-   background-color: var(--purple-light);
+   opacity: .7;
    box-shadow: none;
    cursor: not-allowed;
 }
